--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,7 +1,9 @@
 .header-section h2 {
-    margin-top: 15px;
+  color: white;
+  margin-top: 15px;
 }
+
 .header-section {
-    background: rgba(0,0,0,0.7);
-    padding: 5px 0px 10px 0px;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 5px 0px 10px 0px;
 }
