--- a/src/styles/NYTimesApp.css
+++ b/src/styles/NYTimesApp.css
@@ -18,7 +18,15 @@
   font-size: large;
 }
 
+.articles-section {
+  padding: 30px
+}
+
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
