--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,14 @@ a:hover {
   color: white;
   text-decoration: none;
 }
+
+@media (max-width:414px) {
+  body {
+    background: url('./images/bg-mobile.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    background-attachment: fixed;
+  }
+}
