--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ small {
 }
 
 a {
+  -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -72,11 +73,11 @@ a:hover {
 
 @media (max-width:414px) {
   body {
-    background: url('./images/bg-mobile.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
+    background-image: -webkit-linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./images/bg-mobile.jpg') !important;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./images/bg-mobile.jpg') !important;
     background-attachment: fixed;
+    background-position: center;
+    background-repeat: repeat;
+    background-size: initial;
   }
 }
