--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,14 @@ a:hover {
     background-size: initial;
   }
 }
+
+@media (max-width:736px) and (orientation: landscape) {
+  body {
+    background-image: -webkit-linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./images/bg-landscape.jpg') !important;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./images/bg-landscape.jpg') !important;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: repeat;
+    background-size: initial;
+  }
+}
